# ha-boks

./: .gitignore  Dockerfile.test  README.md  docker-compose.yaml  hacs.json  pyproject.toml  renovate.json  requirements_test.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check_translations.py
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yaml  release.yaml  tests.yaml
blueprints/automation/: boks_battery_alert.yaml  boks_door_left_open.yaml  boks_notifications.yaml  boks_parcel_delivered.yaml  boks_security_alert.yaml
custom_components/boks/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  lock.py  logbook.py  manifest.json  quality_scale.yaml  sensor.py  services.py  services.yaml  todo.py  update.py  util.py
dev_env/config/: configuration.yaml  scripts.yaml
documentation/EN/: README.md  RETRIEVE_KEYS.md  UPDATE.md  configuration.md  create_user_tag.md  features.md  installation.md  introduction.md  prerequisites.md  troubleshooting.md  usage.md
documentation/FR/: README.md  RETRIEVE_KEYS.md  UPDATE.md  usage.md  (+7 more)
scripts/: get_config_key.py
tests/: conftest.py  conftest_minimal.py  test_battery_diagnostics.py  test_ble_device.py  test_ble_device_additional.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_errors.py  test_firmware_bug_workaround.py  test_init.py  test_lock.py  test_log_parsing.py  test_log_processor.py  test_logbook.py  test_packet_factory.py  test_parcels_utils.py  test_pin_generator.py  test_protocol.py  test_sensor.py  test_service_generate_pin.py  test_services.py  test_todo.py
(+157 files in other folders)
